--- a/task-manager-front/package.json
+++ b/task-manager-front/package.json
@@ -14,7 +14,11 @@
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@types/inversify": "^2.0.33",
+    "inversify": "^6.0.2",
+    "reflect-metadata": "^0.2.1",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
