--- a/task-manager-api/package.json
+++ b/task-manager-api/package.json
@@ -31,7 +31,8 @@
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
