--- a/task-manager-front/package.json
+++ b/task-manager-front/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-select": "^5.8.0",
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
