--- a/task-manager-front/package.json
+++ b/task-manager-front/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "dependencies": {
     "@nextui-org/react": "^2.3.5",
     "@types/inversify": "^2.0.33",
