--- a/task-manager-front/.env
+++ b/task-manager-front/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=487793401549-ibakkrhr4lvlfuikdmohp4n75o4mq2i2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 # ENV=QA
-ENV=PROD
+ENV=QA
