--- a/task-manager-front/package.json
+++ b/task-manager-front/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.5",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/inversify": "^2.0.33",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
@@ -25,7 +26,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "redux": "^5.0.1",
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
